# sparc

./: .eslintrc.json  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
configuration/: CONVENTIONS.md  aider.md
docs/: API.md  Developer_Guide.md  User_Guide.md
example/: readme.md
example/Architecture/: Architecture.md
example/Completion/app/: Dockerfile  main.py  pyproject.toml  requirements.txt
example/Pseudocode/: Pseudocode.md
example/Refinement/: Refinement.md
example/Specification/: Specification.md
specification/: Architecture.md  Completion.md  Pseudocode.md  README.md  Refinement.md  Specification.md  requirements.md  sparc.md
