[tool.poetry]
name = "completion-app"
version = "0.1.0"
description = "A sample FastAPI application for the SPARC methodology."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
python-jose = "^3.4.0"
PyJWT = "^2.6.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
